データの登録まで確認

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Tsukurepo"
         tools:targetApi="31">
         <activity
-            android:name=".Data.ui.main.MainActivity"
+            android:name=".data.ui.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
